<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="bmiViewModel"
            type="com.mieszko.mybmicalculator.presentation.calculator.CalculatorViewModel" />

        <variable
            name="navDirectionToStatistics"
            type="androidx.navigation.NavDirections" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".presentation.calculator.CalculatorFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/bmi_calculator_title"
                android:textColor="@color/textBlack"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/bmi_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bmi_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:layout_marginBottom="24dp"
                android:text="@{bmiViewModel.bmiText}"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/height_input_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.75"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="EXAMPLE BMI" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/height_input_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:hint="@string/height"
                app:boxBackgroundColor="@color/lightGray"
                app:layout_constraintBottom_toTopOf="@+id/weight_input_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bmi_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:inputType="number|numberSigned"
                    android:maxLines="1"
                    android:selectAllOnFocus="true"
                    android:text="@={`` + bmiViewModel.inputHeight}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/weight_input_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:layout_marginTop="24dp"
                android:hint="@string/weight"
                app:boxBackgroundColor="@color/lightGray"
                app:layout_constraintBottom_toTopOf="@+id/check_bmi_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/height_input_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:inputType="number|numberSigned"
                    android:maxLines="1"
                    android:selectAllOnFocus="true"
                    android:text="@={`` + bmiViewModel.inputWeight}" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:onClick="@{() -> bmiViewModel.setNewDestination(navDirectionToStatistics.getActionId())}"
                android:padding="12dp"
                android:text="@string/statistics_info"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textAllCaps="true"
                app:layout_constraintBottom_toTopOf="@+id/check_bmi_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weight_input_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/check_bmi_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:elevation="2dp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:onClick="@{() -> bmiViewModel.performBmiCheck()}"
                android:text="@string/check_bmi"
                android:textColor="@color/white"
                app:cornerRadius="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:rippleColor="@color/lightGray" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>